# wikitree-mcp

./: .dockerignore  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  Dockerfile  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  renovate.json
.github/: dependabot.yml
.github/workflows/: auto-assign.yml  ci.yml  code-scanning-alerts.yml  release.yml  sync-to-gitlab.yml
.gitlab/issue_templates/: Default.md
.gitlab/merge_request_templates/: Default.md
docs/superpowers/specs/: 2026-04-11-auth-watchlist-design.md
plans/: auth-watchlist-dna.md
scripts/: check_copyright_header.py  check_file_length.py  check_no_emojis.py
src/wikitree_mcp/: __init__.py  __main__.py  client.py  operations.py  server.py  settings.py
src/wikitree_mcp/tools/: __init__.py  _errors.py  content.py  dna.py  genealogy.py  meta_execute.py  meta_search.py  profiles.py  watchlist.py
tests/: conftest.py  test_client.py  test_errors.py  test_live_client.py  test_live_tools.py  test_meta_execute.py  test_meta_search.py  test_operations.py  test_server.py  test_settings.py  test_tools_content.py  test_tools_dna.py  test_tools_genealogy.py  test_tools_profiles.py  test_tools_watchlist.py
